src/test/ui/parser/issue-81806.rs
trait T { const
impl //~ ERROR: expected identifier, found keyword `impl`
}

fn main() {}
